# backoffice_app-backend

./: .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: entrypoint.sh  manage.py
src/backoffice/: asgi.py  settings.py  urls.py  wsgi.py
src/backoffice/store/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/backoffice/store/migrations/: 0001_initial.py  0002_fixtures.py  0003_remove_order_products_order_total_order_line.py  0004_fixtures_order_lines.py
src/backoffice/store/views/: __init__.py  order.py  order_line.py  product.py
