[project]
name = "backoffice_backend"
version = "1.0.0"
description = "A generic backend for a backoffice app to manage some orders and products."
authors = [
    {name = "Matteo Bilotta",email = "me@byloth.dev"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "psycopg[binary,pool] (>=3.2.6,<4.0.0)",
    "twisted[http2,tls] (>=24.11.0,<25.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"
pytest = "^8.3.5"
pylint-django = "^2.6.1"

[tool.poetry.group.prod.dependencies]
# SMELLS: Inside the Docker container, `setuptools` will be added by `apk` to this specific version.
#         This line forces `poetry` to keep this version without trying to upgrade it (which would fail).
#
setuptools = "70.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
